TI-119 - test(unit tests): change unit tests for interactive notifications